2015-06-03  Gregory Soyez  <soyez@fastjet.fr>

	* Shapes.cc (fastjet_shapes):
	fixed typo in the switch to scalar pt

	* README.md:
	added a description of the first ee and pp studies to implement as
	Rivet routines

	* Shapes.{hh,cc}:
	added Jesse as an author of this

	* Shapes.{hh,cc}:         *** ADDED ***
	added a file containing basic shapes inplementation.
	So far only GeneralisedAngularity

	Shapes live in the fastjet_shapes namespace to reflect the fact
	that they are implemented a fastjet::FunctionOfPseudoJet<double>
	objects (defined as fastjet_shapes::Shape here)


